Vector to SafeList